# lib/other/gen/openapiv2/cc_schema.swagger.json
@@ -45,33 +45,6 @@
         ]
       }
     },
-    "/auth.common.GenericService/Bootstrap": {
-      "post": {
-        "summary": "──────────────────────────────── Invoke ───────────────────────────────────────",
-        "operationId": "GenericService_Bootstrap",
-        "responses": {
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/commonBootstrapRequest"
-            }
-          }
-        ],
-        "tags": [
-          "GenericService"
-        ]
-      }
-    },
     "/auth.common.GenericService/Create": {
       "post": {
         "operationId": "GenericService_Create",
@@ -90,32 +63,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/commonCreateRequest"
-            }
-          }
-        ],
-        "tags": [
-          "GenericService"
-        ]
-      }
-    },
-    "/auth.common.GenericService/CreateCollection": {
-      "post": {
-        "operationId": "GenericService_CreateCollection",
-        "responses": {
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/commonCreateCollectionRequest"
             }
           }
         ],
@@ -1183,52 +1130,6 @@
       "description": "# Action Groups\n  - UNSPECIFIED: null or not set\n  - REGISTER:    Used to register a new user or collection (always allowed)\n  - COLLECTION:  Used to manage collections permissions\n  - MEMBERSHIP:  Used to manage membership of a collection\n  - ITEM:      Used to manage items in a collection\n\n - ACTION_VIEW: View the contents of an item\n - ACTION_CREATE: Create a new item\n - key must not already exist\n - ACTION_UPDATE: Update an existing item\n  - key must already exist\n  - potential has paths\n - ACTION_DELETE: Delete an existing item, key must already exist\n - ACTION_SUGGEST_VIEW: Suggest a change to an item, key must already exist\n - ACTION_SUGGEST_CREATE: Suggest a change to an item, key must already exist\n - ACTION_SUGGEST_DELETE: Delete a suggestion, key must already exist\n - ACTION_SUGGEST_APPROVE: Approve a suggestion and apply it to the item, key must already exist",
       "title": "Action - The action to be performed during the operation"
     },
-    "authAuthType": {
-      "type": "string",
-      "enum": [
-        "AUTH_TYPE_UNSPECIFIED",
-        "AUTH_TYPE_NONE",
-        "AUTH_TYPE_ROLE",
-        "AUTH_TYPE_IDENTITY"
-      ],
-      "default": "AUTH_TYPE_UNSPECIFIED"
-    },
-    "authCollection": {
-      "type": "object",
-      "properties": {
-        "collection_id": {
-          "type": "string",
-          "title": "The key for the ledger"
-        },
-        "name": {
-          "type": "string"
-        },
-        "description": {
-          "type": "string"
-        },
-        "auth_type": {
-          "$ref": "#/definitions/authAuthType"
-        },
-        "item_types": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          },
-          "title": "[(buf.validate.field).repeated.items = {\n   string: {prefix: \"type.googleapis.com/\"}\n }];"
-        },
-        "reference_types": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "default": {
-          "$ref": "#/definitions/authPolices"
-        }
-      },
-      "description": "key := {COLLECTION}{COLLECTION_ID}",
-      "title": "Collection\n┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈\nNote that the types of items are stored in the default ACLEntry"
-    },
     "authHiddenTx": {
       "type": "object",
       "properties": {
@@ -1363,48 +1264,6 @@
         }
       }
     },
-    "authPathPolicy": {
-      "type": "object",
-      "properties": {
-        "path": {
-          "type": "string",
-          "title": "The path is a sub path of a field mask"
-        },
-        "full_path": {
-          "type": "string"
-        },
-        "allow_sub_paths": {
-          "type": "boolean"
-        },
-        "sub_paths": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/authPathPolicy"
-          },
-          "title": "The key is a valid sub path in the type of state item"
-        },
-        "actions": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/authAction"
-          },
-          "title": "If the policy is not set than use a parent policy unless nested policy is set"
-        }
-      },
-      "title": "This message is the tree node for operations on the state item"
-    },
-    "authPolices": {
-      "type": "object",
-      "properties": {
-        "item_policies": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/authPathPolicy"
-          },
-          "title": "key is the item type"
-        }
-      }
-    },
     "authReference": {
       "type": "object",
       "properties": {
@@ -1513,45 +1372,6 @@
         }
       }
     },
-    "commonBootstrapRequest": {
-      "type": "object",
-      "properties": {
-        "default_types": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "add_default_setup": {
-          "type": "boolean"
-        }
-      },
-      "title": "──────────────────────────────── Invoke ───────────────────────────────────────"
-    },
-    "commonBootstrapResponse": {
-      "type": "object",
-      "properties": {
-        "success": {
-          "type": "boolean"
-        }
-      }
-    },
-    "commonCreateCollectionRequest": {
-      "type": "object",
-      "properties": {
-        "collection": {
-          "$ref": "#/definitions/authCollection"
-        }
-      }
-    },
-    "commonCreateCollectionResponse": {
-      "type": "object",
-      "properties": {
-        "collection": {
-          "$ref": "#/definitions/authCollection"
-        }
-      }
-    },
     "commonCreateRequest": {
       "type": "object",
       "properties": {
@@ -1602,7 +1422,7 @@
         "user": {
           "$ref": "#/definitions/authUser"
         },
-        "registerd": {
+        "registered": {
           "type": "boolean"
         }
       }
@@ -2094,11 +1914,11 @@
       "properties": {
         "@type": {
           "type": "string",
-          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
+          "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com. As of May 2023, there are no widely used type server\nimplementations and no plans to implement one.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
         }
       },
       "additionalProperties": {},
-      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\nExample 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\nExample 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
+      "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n    // or ...\n    if (any.isSameTypeAs(Foo.getDefaultInstance())) {\n      foo = any.unpack(Foo.getDefaultInstance());\n    }\n\n Example 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\n Example 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\nJSON\n====\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
     "rpcStatus": {
       "type": "object",
